# MachineLearningUtils

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: codecov_update.yml
classification/: _shrinkage_lda.py
dsutils/classification/: __init__.py  _classifiers.py
dsutils/metrics/: __init__.py
dsutils/preprocessing/: _feature_selection.py  _resample.py
examples/classification/: plot_shrinkage_lda.py
examples/metrics/: plot_confusion_matrix.py
examples/preprocessing/: lof_outlier_elimination.py  manual_range_variable_selection.py  outlier_elimination_model_selection.py
git/hg/: codecov.yml
metrics/: _classification.py
mldsutils/: __init__.py  base.py  imblearn-test.py  pipeline.py  seglearn-test.py
mldsutils/metrics/: __init__.py  _classification.py  _metrics.py  _outlier_elimination.py  _regression.py  _scorer.py
mldsutils/model_selection/: __init__.py  _validation.py
mldsutils/preprocessing/: __init__.py  _feature_selection.py  _outlier_elimination.py  _resample.py
mldsutils/tests/: test_resampler.py  test_scorer.py  test_shrinkage_lda_classifier.py  test_variable_selector.py
mldsutils/utils/: __init__.py  _validation.py
regression/: _regressors.py
